@@ -12,6 +12,8 @@ documents those changes that are of interest to users and administrators.
     active features if SyscfgPath is configured in the knl.conf file.
  -- Fix memory error when updating a job's licenses.
  -- Fix double read lock of tres when updating gres or licenses on a job.
+ -- Fix regression in 16.05.10 with respects to GrpTresMins on a QOS or
+    Association.
 
 * Changes in Slurm 16.05.10-2
 =============================
